@@ -1,7 +1,9 @@
 Release 1.0 (in development)
 ============================
 
-* Add ``latexpdf`` target in quickstart Makefile.
+* Added ``html_output_encoding`` config value.
+
+* Added ``latexpdf`` target in quickstart Makefile.
 
 * #200: Added ``Sphinx.add_stylesheet()``.
 
